examples/test/testpolicy17494.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17494
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key26: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value12
      podSelector:
        matchLabels:
          key47: value45
          key21: value39
          key26: value27
